# FlowerShop

./: .env.example  .env.test  .gitignore  README.md  compose.yml  docker-compose.dev.yml  docker-compose.tests.yml  docker-compose.yml  pytest.ini
backend/: .gitignore  Dockerfile  Dockerfile.test  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 061c33a492a9_add_anon_user_role.py  110307a101c2_add_delivery_address_fields_to_orders.py  2c3d4e5f6a7b_create_tables.py  33f31b3b0b5d_скcreate_invoice_promocodes_user_uid_.py  3d4e5f6a7b8c_make_user_token_unique.py  475cf8011cb1_fix_type_otp_code_in_user_table.py  778fd875c4ec_update_quantity_default_and_sync_in_.py  78706e9aa94b_add_invoice_table.py  7b8ba0add2c9_add_timestamps_to_invoices.py  7e2037972705_fix_category_relation.py  941c2d80aa88_increase_invoices_link_to_text.py  9d63cb4d0d47_fix_userrole_enum.py  9d6e39ac139d_make_unique_user_email_field.py  a004166874ef_delete_anon_user_role_in_roleenum.py  a0e738ad0943_initial_revision.py  a690a0590927_change_otp_code_otp_secret.py  ac96932bd5e8_add_promocode_add_verify_esmil_token_.py  ad896d6a73e5_invoice_user_promocodes.py  cc8b2c954adc_add_user_role.py  f183ff9aab37_init.py  f1bb2dd55b3f_initial.py  f3e1cd1ad675_initial_revision.py  f548f46713ff_add_user_model.py  (+1 more)
backend/docs/: TASKS.md
backend/minio/: Dockerfile
backend/requirements/: all.txt  dev.txt  prod.txt  test.txt
backend/scripts/: entrypoint-backend.sh  entrypoint-minio.sh  generate_jwt_certs.py  init-minio.sh  security.py
backend/src/: create_user.py  main.py  requirements.txt  run.py
backend/tests/: config.py  conftest.py
(+359 files in other folders)
