[project]
name = "flowershop-backend"
version = "0.1.0"
description = "API for flowershop"
requires-python = ">=3.14"
dependencies = [
    "aiobotocore==3.1.0",
    "aiohttp==3.13.3",
    "alembic==1.17.2",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "cryptography==46.0.3",
    "dishka==1.7.2",
    "fastapi==0.128.0",
    "pillow==12.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "PyJWT==2.10.1",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "redis==7.1.0",
    "SQLAlchemy==2.0.45",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-html==4.2.0",
    "pytest-metadata==3.1.1",
    "pytest-mock==3.15.1",
    "pytest-sugar==1.1.1",
    "pytest-xdist==3.8.0",
    "ruff==0.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by formatter
    "N805", # First argument of a method should be named `self` (allow `cls` for classmethods)
    "B008", # Function call in argument defaults (common in FastAPI)
    "B904", # Exception chaining in except blocks (too strict for web APIs)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
